tests/samples/negative/types/bcast_ptr_to_int.ax
module bcast_ptr_to_int;

fn main() -> i32 {
  let pointer: *const i32 = null;
  let address: usize = bitcast<usize>(pointer);
  return cast<i32>(address);
}
